css/table.css
.table {
    overflow-x: auto;
    border-collapse: collapse;
    width: 100%;
    margin: 0 auto;
    line-height: 1.5;
}

.table__caption {
    caption-side: bottom;
    text-align: right;
    font-weight: 700;
    margin-top: 10px;
}

.table__row:nth-child(even) {
    background-color: #cccbcb33;
}

.table__row:hover {
    background-color: #cccbcb67;
}

.table__cell {
    border: 1px solid #ccc;
    text-align: center;
    padding: 13px;
}

.table__cell--header {
    background-color: #5a9597c7;
    color: #f8f7f7;
    font-weight: 700;
}

